@@ -1,7 +1,8 @@
 Dosage 2.0 (released xx.xx.2013)
 
 Features:
-- comics: Added DamnLol, ExtraOrdinary, GoblinsComic, RealmOfAtland, Science,
+- comics: Added DamnLol, EverydayBlues, ExtraOrdinary, GoblinsComic,
+  RealmOfAtland, Science,
   SnowFlakes, StuffNoOneToldMe, WebDesignerCOTW and ZenPencils.
 - comics: Added the --vote option to vote for popular comics.
 
